package gamer.protocol;

message TingCardMsgProtocol {
  repeated uint32 cards_of_ting  = 1; 
  optional uint32 discard        = 2;
}